# df-interchange

./: Cargo.toml  Justfile  README.md
.github/workflows/: testing.yml
data/: download.sh
src/: error.rs  from_arrow.rs  from_polars.rs  lib.rs  to_arrow.rs  to_polars.rs
tests/: arrow_to_arrow.rs  arrow_to_polars.rs  crates.rs  large.rs  p045_p046.rs  polars_to_arrow.rs  polars_to_polars.rs  polars_up_one.rs  setup.rs
tests/common/: mod.rs
tests/data/: test_types.parquet
