[package]
name = "df-interchange"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
description = "Seamless interoperability between Polars and Arrow."
repository = "https://github.com/EricFecteau/df-interchange"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[dependencies]

paste = "1"
thiserror = "2"

# Arrow 50
arrow_crate_50 = { package = "arrow", version = "50", features = ["ffi"], optional = true}

# Arrow 51
arrow_crate_51 = { package = "arrow", version = "51", features = ["ffi"], optional = true}

# Arrow 52
arrow_crate_52 = { package = "arrow", version = "52", features = ["ffi"], optional = true}

# Arrow 53
arrow_crate_53 = { package = "arrow", version = "53", features = ["ffi"], optional = true}

# Arrow 54
arrow_crate_54 = { package = "arrow", version = "54", features = ["ffi"], optional = true}

# Polars 0.40
polars_crate_0_40 = { package = "polars", version = "0.40", optional = true}
polars_arrow_0_40 = { package = "polars-arrow", version = "0.40", optional = true}

# Polars 0.41
polars_crate_0_41 = { package = "polars", version = "0.41", optional = true}
polars_arrow_0_41 = { package = "polars-arrow", version = "0.41", optional = true}

# Polars 0.42
polars_crate_0_42 = { package = "polars", version = "0.42", optional = true}
polars_arrow_0_42 = { package = "polars-arrow", version = "0.42", optional = true}

# Polars 0.43
polars_crate_0_43 = { package = "polars", version = "0.43", optional = true}
polars_arrow_0_43 = { package = "polars-arrow", version = "0.43", optional = true}

# Polars 0.44
polars_crate_0_44 = { package = "polars", version = "0.44", optional = true}
polars_arrow_0_44 = { package = "polars-arrow", version = "0.44", optional = true}

# Polars 0.45
polars_crate_0_45 = { package = "polars", version = "0.45", optional = true}
polars_arrow_0_45 = { package = "polars-arrow", version = "0.45", optional = true}

# Polars 0.46
polars_crate_0_46 = { package = "polars", version = "0.46", optional = true}
polars_arrow_0_46 = { package = "polars-arrow", version = "0.46", optional = true}

[features]
all = ["all_polars", "all_arrow"]
all_polars = ["polars_0_40", "polars_0_41", "polars_0_42", "polars_0_43", "polars_0_44", "polars_0_45", "polars_0_46"]
all_arrow = ["arrow_50", "arrow_51", "arrow_52", "arrow_53", "arrow_54"]
polars_0_40 = ["polars_crate_0_40", "polars_arrow_0_40"]
polars_0_41 = ["polars_crate_0_41", "polars_arrow_0_41"]
polars_0_42 = ["polars_crate_0_42", "polars_arrow_0_42"]
polars_0_43 = ["polars_crate_0_43", "polars_arrow_0_43"]
polars_0_44 = ["polars_crate_0_44", "polars_arrow_0_44"]
polars_0_45 = ["polars_crate_0_45", "polars_arrow_0_45"]
polars_0_46 = ["polars_crate_0_46", "polars_arrow_0_46"]
arrow_50 = ["arrow_crate_50"]
arrow_51 = ["arrow_crate_51"]
arrow_52 = ["arrow_crate_52"]
arrow_53 = ["arrow_crate_53"]
arrow_54 = ["arrow_crate_54"]

[dev-dependencies]
polars_crate_0_46 = { package = "polars", version = "0.46", features = ["lazy", "csv", "is_in"] }